-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
720bfe108 (dev), 8852cdee4 (6.7), 29d2153f8 (dev), 7b26a46ba (6.7), 49165e964 (dev), 3c01645e6 (6.7)
Currently, our completion for qualified types is not working 100%:
you can autocomplete stuff like:
import QtQuick as QQ QQ<autocomplete here>
and you will get suggestions like QQ.Item, QQ.Accessible, and so on
If you enter the dot and something and try completing again, then you don't get any completions anymore:
import QtQuick as QQ QQ.Ite<autocomplete here>
The usages of QQmlLSUtils::reachableTypes() in qqmllsutils.cpp should be adapted to this scenario.
- is required for
-
QTBUG-113727 qmlls: improve Code completion using new QQmlLSUtils stuff
-
- Closed
-
- resulted in
-
QTBUG-120677 tst_qmlls_utils: adapt tests to changes in qmlls
-
- Closed
-
| For Gerrit Dashboard: QTBUG-120111 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 525456,10 | qmlls: fix completion on attached and grouped properties | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 526837,4 | qmlls: fix completion on attached and grouped properties | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 526982,14 | qmlls: fix QmlObject and type annotation completion | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 531080,3 | qmlls: fix QmlObject and type annotation completion | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 532044,5 | qmlls: enable qualified type completion in Bindings | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 542840,3 | qmlls: enable qualified type completion in Bindings | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |